--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="shortcut icon" href="assets/BOC.png" type="image/x-icon">
         <meta property="og:url" content="luranmeahda" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="CO Certificate" />
+        <meta property="og:title" content="JSE Participation Certificate" />
         <meta property="og:description" content="Junior Science Enthusiasta organized by Bangladesh Olympiadians Club" />
         <meta property="og:image" content="https://scontent.fdac35-1.fna.fbcdn.net/v/t1.0-9/129294154_189916462811523_1380237859092618461_n.jpg?_nc_cat=101&ccb=2&_nc_sid=340051&_nc_ohc=X4Sv9Ab9OOwAX_nZ8V8&_nc_ht=scontent.fdac35-1.fna&oh=31bc04470af3f9133e01d64ca7fd94e0&oe=6009CF1E" />
     </head>
